<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="banner_ad_unit_id">ca-app-pub-2839693431129409/5370740372</string>
    <string name="Intestical_ad">ca-app-pub-2839693431129409/8457781178</string>

    <string name="banner_ad_unit_id2">ca-app-pub-2839693431129409/8457781178</string>
    <string name="Intestical_ad2">ca-app-pub-3940256099942544/1033173712</string>

    <string name="app_name">Dollar Prices Today</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Dollar Prices</string>
    <string name="title_activity_view_country">ViewCountry</string>
    <string name="hello_world">Hello world!</string>


    <string name="appVersion">
      Version 1.0
    </string>

        <string name="appabout">
     This application was developed by Bixls.com
            \n © 2015 all rights reserved.
    </string>



    <string-array name="drawer_Array">
        <item>Home</item>
        <item>Settings</item>
        <item>Calculator</item>
        <item>Prices Tables</item>
    </string-array>

    <string name="equal">=</string>
    <string name="Sync"> Sync</string>
    <string name="SyncMsg">Successfully synced</string>
    <string name="FirstTimeSync"> Please make sure you are connected to the internet to sync data for the first time</string>
    <string name="FirstTimeSync2">after checking please click on sync again</string>
    <string name="BadSync">A problem in syncing process</string>
    <string name="lastSync">Last sync</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="calculate">Calculate</string>
    <string name="HomeSettings">Home Settings</string>
    <string name="FirstTime">  Welcome</string>
    <string name="DollarPricesIn">Dollar prices in</string>
    <string name="DollarPricesInsmall">Dollar prices and other countries today in</string>
    <string name="currency">Currency</string>
    <string name="currencywith">Today\'s price</string>
    <string name="Save">Save</string>
    <string name="SaveMsg">Saved successful </string>
    <string name="USD">USA</string>
    <string name="USD_short">USD</string>
    <string name="USD_Full">Dollar</string>
    <string name="EGP">Egypt</string>
    <string name="EGP_short"> EGP</string>
    <string name="EGP_Full"> EGP</string>
    <string name="SAR">KSA</string>
    <string name="SAR_short">SAR</string>
    <string name="SAR_Full">SAR</string>
    <string name="KWD">Kuwait</string>
    <string name="KWD_short">KWD</string>
    <string name="KWD_Full">KWD</string>
    <string name="QAR">Qatar</string>
    <string name="QAR_short">QAR</string>
    <string name="QAR_Full">QAR</string>
    <string name="JOD">Jordan</string>
    <string name="JOD_short">JOD</string>
    <string name="JOD_Full">JOD</string>
    <string name="BHD">Bahrain</string>
    <string name="BHD_short">BHD</string>
    <string name="BHD_Full">BHD</string>
    <string name="AED">UAE</string>
    <string name="AED_short">AED</string>
    <string name="AED_Full">AED</string>
    <string name="LBP">Lebanon</string>
    <string name="LBP_short">LBP</string>
    <string name="LBP_Full">LBP</string>
    <string name="LYD">Labia</string>
    <string name="LYD_short">LYD</string>
    <string name="LYD_Full">LYD</string>
    <string name="TND">Tunisia</string>
    <string name="TND_short">TND</string>
    <string name="TND_Full">TND</string>
    <string name="YER">Yemen</string>
    <string name="YER_short">YER</string>
    <string name="YER_Full">YER</string>
    <string name="SYP">Syria</string>
    <string name="SYP_short">SYP</string>
    <string name="SYP_Full">SYP</string>
    <string name="DZD">Algeria</string>
    <string name="DZD_short">DZD</string>
    <string name="DZD_Full">DZD</string>




    <string name="DJF">Djibouti</string>
    <string name="DJF_short">DJF</string>
    <string name="DJF_Full">DJF</string>

    <string name="IQD">Iraq</string>
    <string name="IQD_short">IQD</string>
    <string name="IQD_Full">IQD</string>


    <string name="MAD">Morocco</string>
    <string name="MAD_short">MAD</string>
    <string name="MAD_Full">MAD</string>


    <string name="OMR">Oman</string>
    <string name="OMR_short">OMR</string>
    <string name="OMR_Full">OMR</string>


    <string name="SDG">Sudan</string>
    <string name="SDG_short">SDG</string>
    <string name="SDG_Full">SDG</string>


    <string name="SOS">Somalia</string>
    <string name="SOS_short">SOS</string>
    <string name="SOS_Full">SOS</string>


    <string name="TRY">Turkey</string>
    <string name="TRY_short">TRY</string>
    <string name="TRY_Full">TRY</string>


    <string name="RON">Romania</string>
    <string name="RON_short">RON</string>
    <string name="RON_Full">RON</string>

    <string name="GBP">United Kingdom</string>
    <string name="GBP_short">GBP</string>
    <string name="GBP_Full">GBP</string>

    <string name="EUR">euro</string>
    <string name="EUR_short">EUR</string>
    <string name="EUR_Full">EUR</string>


    <string name="DEM">Germany</string>
    <string name="DEM_short">DEM</string>
    <string name="DEM_Full">DEM</string>

    <string name="ILS">Israel</string>
    <string name="ILS_short">TRY</string>
    <string name="ILS_Full">TRY</string>


    <string name="ITL">Italy</string>
    <string name="ITL_short">ITL</string>
    <string name="ITL_Full">ITL</string>


    <string name="RUB">Russia</string>
    <string name="RUB_short">RUB</string>
    <string name="RUB_Full">RUB</string>


    <string name="SZL">Sweden</string>
    <string name="SZL_short">SZL</string>
    <string name="SZL_Full">SZL</string>


    <string name="ANG">Holland</string>
    <string name="ANG_short">ANG</string>
    <string name="ANG_Full">ANG</string>



    <string name="CNY">China</string>
    <string name="CNY_short">CNY</string>
    <string name="CNY_Full">CNY</string>



    <string name="NOK">Norway</string>
    <string name="NOK_short">NOK</string>
    <string name="NOK_Full">NOK</string>

    <string name="title_activity_setting_first_time">SettingFirstTime</string>
    <string name="appwidget_text">7.6251</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_first_time">FirstTime</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_internet_first">internetFirst</string>
    <string name="title_activity_about">About us</string>

</resources>
