<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bixls.dollarprices.internetFirst"
    android:background="@drawable/back"
    android:gravity="center">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/calcitemshape"
        android:layout_gravity="right"
        android:padding="20sp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FirstTimeSync"
            android:id="@+id/textView"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FirstTimeSync2"
            android:id="@+id/textView2"
            android:layout_margin="10sp"
            android:gravity="center" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sync"
            android:id="@+id/SyncButtom"
            android:layout_below="@+id/SyncText"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/sync"
            android:background="@drawable/buttonshape" />


    </LinearLayout>


</RelativeLayout>
